force-app/main/default/objects/Product_Inspection__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Product Inspections</relationshipLabel>
    <relationshipName>Product_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>