force-app/main/default/objects/Product_Inspection__c/fields/Linked_NCR__c.field-meta.xml
<CustomField>
    <fullName>Linked_NCR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked NCR</label>
    <referenceTo>Non_Conformance_Report__c</referenceTo>
    <relationshipLabel>Product Inspections</relationshipLabel>
    <relationshipName>Product_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>