force-app/main/default/objects/Product_Inspection__c/fields/Non_Conformance_Report__c.field-meta.xml
<CustomField>
    <fullName>Non_Conformance_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Conformance Report</label>
    <type>Checkbox</type>
</CustomField>