force-app/main/default/objects/Product_Inspection__c/fields/PO_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>PO_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Line Item</label>
    <referenceTo>PO_Line_Items__c</referenceTo>
    <relationshipLabel>Product Inspections</relationshipLabel>
    <relationshipName>Product_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>