force-app/main/default/objects/Product_Inspection__c/fields/Quantity_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Inspected__c</fullName>
    <label>Quantity Inspected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>