force-app/main/default/objects/Product_Inspection__c/validationRules/Inspection_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspection_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Inspection_Date__c &gt;   TODAY()</errorConditionFormula>
    <errorMessage>Inspection Date cannot be in the future</errorMessage>
</ValidationRule>