force-app/main/default/objects/Product_Inspection__c/validationRules/Inspection_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspection_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Inspection_Date__c  &lt;  TODAY()</errorConditionFormula>
    <errorMessage>Inspection Date cannot be in the past</errorMessage>
</ValidationRule>