force-app/main/default/objects/Product_Inspection__c/validationRules/Inspector_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Inspector_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Inspector__c )</errorConditionFormula>
    <errorMessage>Please select the Inspector who performed this inspection</errorMessage>
</ValidationRule>