force-app/main/default/objects/Product_Inspection__c/validationRules/No_NCR_on_Pass.validationRule-meta.xml
<ValidationRule>
    <fullName>No_NCR_on_Pass</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISPICKVAL( Result__c , &quot;Pass&quot;) , 
Non_Conformance_Report__c , 
NOT( ISBLANK( Linked_NCR__c ) ))</errorConditionFormula>
    <errorMessage>NCR should be unchecked if Result is Pass</errorMessage>
</ValidationRule>