force-app/main/default/objects/Product_Inspection__c/validationRules/Quantity_Inspection_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Inspection_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Quantity_Inspected__c &lt;= 0, ISBLANK( Quantity_Inspected__c ) )</errorConditionFormula>
    <errorMessage>Quantity Inspected must be greater than zero</errorMessage>
</ValidationRule>