force-app/main/default/objects/Product_Inspection__c/validationRules/Require_NCR_On_Fail.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_NCR_On_Fail</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Result__c , &quot;Fail&quot;) ,  

 OR
(
  NOT(Non_Conformance_Report__c ),
   ISBLANK( Linked_NCR__c )   )
)</errorConditionFormula>
    <errorMessage>Failed inspections must have the Non-Conformance checkbox selected.</errorMessage>
</ValidationRule>