force-app/main/default/objects/Product_Inspection__c/validationRules/Result_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Result_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Result__c , &quot;Pass&quot;) , PO_Line_Item__r.Quantity_Ordered__c =0)</errorConditionFormula>
    <errorMessage>If quanity is 0 in PO_LINE_ITEM Then result cannot be pass</errorMessage>
</ValidationRule>